--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,1 +1,7 @@
-<p>cabecalho works!</p>
+<header class="cabecalho ff-inter">
+  <div class="logo">
+    <img class="imagem" src="../../../assets/imagens/logo-memoteca.png" alt="Logo da Aplicação Memoteca">
+    <p>Guarde trechos de músicas, citações de livros, pensamentos e suas melhores ideias</p>
+    <img class="imagem" src="./assets/imagens/computador-cabecalho.png" alt="Imagem de um computador">
+  </div>
+</header>
