--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -1,1 +1,84 @@
-<p>criar-pensamento works!</p>
+<section class="container criar-pensamentos ff-inter" xmlns="http://www.w3.org/1999/html">
+  <header  class="header">
+    <h2>Adicione um <br> pensamento novo:</h2>
+  </header>
+  <form>
+    <label for="pensamento">Pensamento</label>
+    <input
+      type="textarea" class="input" id="pensamento"
+      name="pensamento"
+      placeholder="Digite o pensamento">
+
+    <label for="autoria">Autoria</label>
+    <input
+      type="text" class="input"
+      id="autoria"
+      name="autoria"
+      placeholder="Digite a autoria ou fonte">
+
+    <label for="modelo">Selecione o modelo do card:</label>
+    <div class="container-radio">
+      <div class="radio-modelo">
+        <label for="modelo1">
+          <input
+            type="radio"
+            name="modelo-card"
+            id="modelo1"
+            value="modelo1">
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 1</span>
+        </label>
+        Previa:
+        <div class="modelo modelo1 ff-roboto-mono">
+          <img src="../../../../assets/imagens/modelo1.png" alt="">
+          <p class="conteudo">Aqui vai o conteúdo</p>
+          <p class="autoria">Aqui vai a <b>autoria</b></p>
+        </div>
+      </div>
+      <div class="radio-modelo">
+        <label for="modelo2">
+          <input
+            type="radio"
+            name="modelo-card"
+            id="modelo2"
+            value="modelo2">
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 2</span>
+        </label>
+        Previa:
+        <div class="modelo modelo2 ff-roboto-mono">
+          <img src="../../../../assets/imagens/modelo2.png" alt="">
+          <p class="conteudo">Aqui vai o conteúdo</p>
+          <p class="autoria">Aqui vai a <b>autoria</b></p>
+        </div>
+      </div>
+      <div class="radio-modelo">
+        <label for="modelo3">
+          <input
+            type="radio"
+            name="modelo-card"
+            id="modelo3"
+            value="modelo3">
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 1</span>
+        </label>
+        Previa:
+        <div class="modelo modelo3 ff-roboto-mono">
+          <img src="../../../../assets/imagens/modelo3.png" alt="">
+          <p class="conteudo">Aqui vai o conteúdo</p>
+          <p class="autoria">Aqui vai a <b>autoria</b></p>
+        </div>
+      </div>
+      </div>
+      <div class="acoes">
+        <button class="botao">Salvar</button>
+        <button class="botao">Cancelar</button>
+    </div>
+  </form>
+</section>
