--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -5,8 +5,10 @@
   <form>
     <label for="pensamento">Pensamento</label>
     <input
-      type="textarea" class="input" id="pensamento"
+      type="textarea" class="input"
+      id="pensamento"
       name="pensamento"
+      [value]="pensamento.conteudo"
       placeholder="Digite o pensamento">
 
     <label for="autoria">Autoria</label>
@@ -33,9 +35,9 @@
         Previa:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo1.png" alt="">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria">Aqui vai a <b>autoria</b></p>
-        </div>
+          <p class="conteudo">{{pensamento.conteudo}}</p>
+          <p class="autoria">{{pensamento.autoria}}</p>
+        </div>conteudo
       </div>
       <div class="radio-modelo">
         <label for="modelo2">
@@ -52,8 +54,8 @@
         Previa:
         <div class="modelo modelo2 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo2.png" alt="">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria">Aqui vai a <b>autoria</b></p>
+          <p class="conteudo">{{pensamento.conteudo}}</p>
+          <p class="autoria">{{pensamento.autoria}}</p>
         </div>
       </div>
       <div class="radio-modelo">
@@ -71,13 +73,13 @@
         Previa:
         <div class="modelo modelo3 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo3.png" alt="">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria">Aqui vai a <b>autoria</b></p>
+          <p class="conteudo">{{pensamento.conteudo}}</p>
+          <p class="autoria">{{pensamento.autoria}}</p>
         </div>
       </div>
       </div>
       <div class="acoes">
-        <button class="botao">Salvar</button>
+        <button (click)="salvarPensamento()" class="botao">Salvar</button>
         <button class="botao">Cancelar</button>
     </div>
   </form>
