Adding routerLink to /listarPensamentos

--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -89,6 +89,7 @@
           class="botao">Salvar</button>
         <button
           (click)="cancelar()"
+          routerLink="/listarPensamento"
                 class="botao">Cancelar</button>
     </div>
   </form>
