--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.html
@@ -8,8 +8,8 @@
       <img src="/assets/imagens/icone-editar.png" alt="">
     </button>
 
-    <button class="botao-excluir">
-      <img src="/assets/imagens/icone-excluir.png" alt="">
+    <button class="botao-excluir" routerLink="/pensamentos/excluirPensamento/{{pensamento.id}}">
+      <img src="/assets/imagens/icone-excluir.png" alt="Ícone de excluir">
     </button>
 
   </div>
