--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.html
@@ -5,7 +5,7 @@
   <div class="acoes">
 
     <button class="botao-editar">
-      <img src="/assets/imagens/icone-editar.png" alt="">
+      <img src="/assets/imagens/icone-editar.png" routerLink="/pensamentos/editarPensamento/{{ pensamento.id }}" alt="">
     </button>
 
     <button class="botao-excluir" routerLink="/pensamentos/excluirPensamento/{{pensamento.id}}">
